# benchmarking-rust

./: .gitignore  Cargo.toml  README.md  analyses.md  package.json  presentation.md  requirements.txt  start.ps1  start.sh
.github/workflows/: build-and-benchmark.yml
analysis/: generate_pdf.py  generate_report.py  merge_results.py  utils.py  visualize.py
docs/: checklist_presentation.md  guide.md  references.md  structure.md
src/: main.rs
src/algorithms/: astar.rs  bfs.rs  dfs.rs  idastar.rs  iterative_deepening.rs  mod.rs
src/benchmarking/: metrics.rs  mod.rs  runner.rs
src/problems/: mod.rs  shortest_path.rs  taquin.rs
src/utils/: heuristics.rs
