[package]
name = "benchmarking-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
priority-queue = "2.0"
rustc-hash = "2.0"
chrono = "0.4"
rayon = "1.8"
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
